--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>LPP simulation and development group</title>
+		<title>Numerical Plasmas Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,15 +20,46 @@
 			<!-- Header -->
 				<div id="header">
 
-					<!-- Logo -->
-						<h1><a href="index.html" id="logo">LPP<em> Simulation and Development group</em></a></h1>
-
+					<!-- Logo
+						<h1><a href="index.html" id="logo">Numerical Plasmas Group</a></h1>-->
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
+
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#whoarewe">Who Are We?</a>
+								</li>
+
+
+								<li>
+									<a href="#news">News</a>
+								</li>
+
+								<li>
+									<a href="#DevDejs">Dev-Dejs</a>
+								</li>
+
+
+
+								<li>
+									<a href="#ourcodeprojects">Our code projects</a>
+									<ul>
+											<li> <a href="#"> PHARE </a></li>
+											<li> <a href="#"> LPPIC </a></li>
+											<li> <a href="#"> SciQLOP </a></li>
+											<li> <a href="#"> SoCExplorer </a></li>
+									</ul>
+								</li>
+
+								<li>
+									<a href="#joinus">Join Us</a>
+									<ul>
+											<li> <a href="#"> Internships </a></li>
+											<li> <a href="#"> Jobs </a></li>
+									</ul>
+								</li>
+									<!--
 									<ul>
 										<li><a href="#">Lorem dolor</a></li>
 										<li><a href="#">Magna phasellus</a></li>
@@ -46,22 +77,26 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+							-->
+
+								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
+							-->
 							</ul>
 						</nav>
 
 				</div>
 
-			<!-- Banner -->
+			<!-- Banner-->
 				<section id="banner">
 					<header>
 						<h2>Get our codes:</h2>
 						<a href="https://github.com/LaboratoryOfPlasmaPhysics" class="button">https://github.com/LaboratoryOfPlasmaPhysics</a>
 					</header>
 				</section>
+
 
 			<!-- Highlights -->
 				<section class="wrapper style1">
@@ -70,49 +105,111 @@
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major fa-paper-plane"></i>
-									<h3>Who Are We?</h3>
-									<p>The <em>Simulation and Dev</em> gathers folks interested in developing codes for plasma physics. Researchers, engineers, PhDs, post-docs, etc.
-									   Our ambition is to produce quality code together and share it.</p>
+									<h3 id="numericalsimulation">Numerical Simulation</h3>
+									<!-- <p>The <em>Simulation and Dev</em> gathers folks interested in developing codes for plasma physics. Researchers, engineers, PhDs, post-docs, etc.
+									   Our ambition is to produce quality code together and share it.</p> -->
+										 <p>Numerical simulation</p>
 								</div>
-								<div class="box highlight">
-									<i class="icon major fa-paper-plane"></i>
-									<h3>Our Code Projects</h3>
-									<p>The <em>Simulation and Dev</em> gathers folks interested in developing codes for plasma physics. Researchers, engineers, PhDs, post-docs, etc.
-									   Our ambition is to produce quality code together and share it.</p>
-								</div>
+
 							</section>
 							<section class="4u 12u(narrower)">
+
 								<div class="box highlight">
 									<i class="icon major fa-pencil"></i>
-									<h3>Group News</h3>
-									<p>DevDej is a weekly lunchtime meeting to share knowledge and experiences on code projects, tools, and day to day problems developers encounter</p>
-								</div>
-								<div class="box highlight">
-									<i class="icon major fa-pencil"></i>
-									<h3>Dev Dej</h3>
-									<p>DevDej is a weekly lunchtime meeting to share knowledge and experiences on code projects, tools, and day to day problems developers encounter</p>
+									<h3>Data analysis</h3>
+									<!-- <p>DevDej is a weekly lunchtime meeting to share knowledge and experiences on code projects, tools, and day to day problems developers encounter</p>
+									-->
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major fa-wrench"></i>
-									<h3>Join Us</h3>
-									<p>You like developing code for science? Whether you like writing code for numerical simulations, embedded systems onboard satelites or data analysis, see <a href="#">opportunities at LPP</a></p>
+									<h3>Experiments & on-board software</h3>
+									<!-- <p>You like developing code for science? Whether you like writing code for numerical simulations, embedded systems onboard satelites or data analysis, see <a href="#">opportunities at LPP</a></p>
+									-->
 								</div>
 							</section>
 						</div>
 					</div>
 				</section>
 
+
+
+
+				<!-- Gigantic Heading -->
+					<section class="wrapper style2">
+						<div class="container">
+							<header class="major">
+								<h2>Group News</h2>
+							</header>
+						</div>
+					</section>
+				<!-- News -->
+					<section class="wrapper style1">
+						<div class="container">
+							<div class="row">
+								<section class="6u 12u(narrower)">
+									<div class="box post">
+										<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+										<div class="inner">
+											<h3>news 1</h3>
+											<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										</div>
+									</div>
+								</section>
+
+
+							</div>
+						</div>
+					</section>
+
+
+
+
+
+
+
+				<!-- Gigantic Heading -->
+			<section class="wrapper style2">
+					<div class="container">
+						<header class="major">
+							<h2>Devdejs</h2>
+						</header>
+						Devdejs are weekly lunchtime meetings 
+					</div>
+			</section>
+
+		<!-- News -->
+					<section class="wrapper style1">
+					<div class="container">
+					<div class="row">
+					<section class="6u 12u(narrower)">
+					<div class="box post">
+					<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+					<div class="inner">
+					<h3>news 1</h3>
+					<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+				</div>
+				</div>
+				</secti				</div>
+				</div>
+				</section>
+
+
+
+
+
+
 			<!-- Gigantic Heading -->
 				<section class="wrapper style2">
 					<div class="container">
-						<header class="major">
-							<h2>Our code projects</h2>
-							<p>Discover our main code projects at LPP</p>
+						 <header class="major">
+							<h2 id="ourcodeprojects">Our code projects</h2>
+							<!-- <p>Discover our main code projects at LPP</p> -->
 						</header>
 					</div>
 				</section>
+
 
 			<!-- Posts -->
 				<section class="wrapper style1">
@@ -120,19 +217,21 @@
 						<div class="row">
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/phare.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>PHARE</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p>Parallel Hybrid Particle-In-Cell code with Adaptive mesh REfinement. Modern C++ code in development with
+											 support of the labex <a href="http://www.plasapar.com/en/">Plas@Par</a>.
+										<a href="https://github.com/LaboratoryOfPlasmaPhysics/PHARE">See in GitHub</a></p>
 									</div>
 								</div>
 							</section>
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/lppic.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>LPPIC</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p>2.5D Parallel electrostatic Particle-In-Cell code developed at LPP for studying plasma propulsors.</p>
 									</div>
 								</div>
 							</section>
@@ -140,19 +239,21 @@
 						<div class="row">
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/sciqlop.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>SciQLOP</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p>Efficient and Ergonomic application to explore spacecraft in situ plasma data and create catalogs of events.
+											<a href="https://github.com/LaboratoryOfPlasmaPhysics/SciQLOP"> See on GitHub</a></p>
 									</div>
 								</div>
 							</section>
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/socexp.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>SocExplorer</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p>SocExplorer is an open source generic System On Chip testing software/framework.
+										<a href="https://github.com/LaboratoryOfPlasmaPhysics/SocExplorer"> See on GitHub</a></p>
 									</div>
 								</div>
 							</section>
@@ -160,59 +261,14 @@
 					</div>
 				</section>
 
-			<!-- Gigantic Heading -->
-				<section class="wrapper style2">
-					<div class="container">
-						<header class="major">
-							<h2>Group News</h2>
-						</header>
-					</div>
-				</section>
-			<!-- News -->
-				<section class="wrapper style1">
-					<div class="container">
-						<div class="row">
-							<section class="6u 12u(narrower)">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>news 1</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-							<section class="6u 12u(narrower)">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>News2</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-						</div>
-						<div class="row">
-							<section class="6u 12u(narrower)">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>News3</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-							<section class="6u 12u(narrower)">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>News4</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-						</div>
-					</div>
-				</section>
+
+
+
+
+
+
+
+
 			<!-- CTA -->
 				<section id="cta" class="wrapper style3">
 					<div class="container">
