add devdej program

--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
 								<div class="box highlight">
 									<i class="icon major fa-paper-plane"></i>
 									<h3 id="numericalsimulation">Numerical Simulation</h3>
-									<!-- <p>The <em>Simulation and Dev</em> gathers folks interested in developing codes for plasma physics. Researchers, engineers, PhDs, post-docs, etc.
-									   Our ambition is to produce quality code together and share it.</p> -->
-										 <p>Numerical simulation</p>
+										 <p>Numerical simulation for plasma physics</p>
 								</div>
 
 							</section>
@@ -117,8 +115,7 @@
 								<div class="box highlight">
 									<i class="icon major fa-pencil"></i>
 									<h3>Data analysis</h3>
-									<!-- <p>DevDej is a weekly lunchtime meeting to share knowledge and experiences on code projects, tools, and day to day problems developers encounter</p>
-									-->
+									
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
@@ -152,8 +149,9 @@
 									<div class="box post">
 										<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
 										<div class="inner">
-											<h3>news 1</h3>
-											<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+											<h3>Nomad DevDejs!</h3>
+											<p>Created in 2016, Devdejs are lunchtime meeting for developers. Originally located at LPP, DevDejs will
+												 now occur in different labs of Ecole Polytechnique. </p>
 										</div>
 									</div>
 								</section>
@@ -175,23 +173,27 @@
 						<header class="major">
 							<h2>Devdejs</h2>
 						</header>
-						Devdejs are weekly lunchtime meetings 
+						Devdejs are weekly lunchtime meetings for developers at Ecole Polytechnique. The idea is to have a time and place to meet,
+						discuss and share about code development techniques, projects, tools related to numerical simulation,
+						data analysis, instrumentation and experiments.
 					</div>
 			</section>
 
-		<!-- News -->
-					<section class="wrapper style1">
+			<section class="wrapper style1">
 					<div class="container">
 					<div class="row">
-					<section class="6u 12u(narrower)">
-					<div class="box post">
-					<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
-					<div class="inner">
-					<h3>news 1</h3>
-					<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+							<ul>
+								<p>program </p>
+								<li>Nov. 6 2018 : Marc-Antoine Drouin -  <a href="https://kubernetes.io">Kubernetes</a>
+									and projects at <a href="http://www.lmd.jussieu.fr">LMD</a>	</li>
+								<li>Nov. 13 2018: Jayesh Badwaik <a href="https://jayeshbadwaik.github.io">https://jayeshbadwaik.github.io</a></li>
+								<li>Nov. 15 2018: Mathieu Lobet (Maison de la Simulation) - optimisaiton de <a href="https://smileipic.github.io/Smilei">SMILEI</a></li>
+								<li>Nov. 29 2018: Alejandro Alvarez Laguna (LPP) - C++ electrostatic plasma fluid code </li>
+								<li>Dec. 6 2018: Clément Moissard (LPP) - Hybrid PIC code for IMCE/Magnetoshere interations </li>
+								<li>Dec. 13 2018: Ralph Katra (LPP) - TBD</li>
+							</ul>
+
 				</div>
-				</div>
-				</secti				</div>
 				</div>
 				</section>
 
