--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								</li>
 
 								<li>
-									<a href="#DevDejs">Dev-Dejs</a>
+									<a href="#devdejs">Dev-Dejs</a>
 								</li>
 
 
@@ -106,7 +106,8 @@
 								<div class="box highlight">
 									<i class="icon major fa-paper-plane"></i>
 									<h3 id="numericalsimulation">Numerical Simulation</h3>
-										 <p>Numerical simulation for plasma physics</p>
+										 <p>Full and Hybrid Particle-In-Cell, Magnetohydrodynamics and other codes are developed
+										 and used in the group.</p>
 								</div>
 
 							</section>
@@ -115,13 +116,14 @@
 								<div class="box highlight">
 									<i class="icon major fa-pencil"></i>
 									<h3>Data analysis</h3>
-									
+									<p>The group develops codes for analizing experimental and spacecraft data.</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major fa-wrench"></i>
 									<h3>Experiments & on-board software</h3>
+									These codes are developed for driving experiment devices in the lab and on-board spacecraft.
 									<!-- <p>You like developing code for science? Whether you like writing code for numerical simulations, embedded systems onboard satelites or data analysis, see <a href="#">opportunities at LPP</a></p>
 									-->
 								</div>
@@ -137,7 +139,7 @@
 					<section class="wrapper style2">
 						<div class="container">
 							<header class="major">
-								<h2>Group News</h2>
+								<h2 id="news">Group News</h2>
 							</header>
 						</div>
 					</section>
@@ -147,7 +149,7 @@
 							<div class="row">
 								<section class="6u 12u(narrower)">
 									<div class="box post">
-										<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image left"><img src="images/devdej.jpg" alt="" /></a>
 										<div class="inner">
 											<h3>Nomad DevDejs!</h3>
 											<p>Created in 2016, Devdejs are lunchtime meeting for developers. Originally located at LPP, DevDejs will
@@ -171,7 +173,7 @@
 			<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>Devdejs</h2>
+							<h2 id="devdejs">Devdejs</h2>
 						</header>
 						Devdejs are weekly lunchtime meetings for developers at Ecole Polytechnique. The idea is to have a time and place to meet,
 						discuss and share about code development techniques, projects, tools related to numerical simulation,
@@ -183,14 +185,14 @@
 					<div class="container">
 					<div class="row">
 							<ul>
-								<p>program </p>
+								<h2>P	rogram </h2>
 								<li>Nov. 6 2018 : Marc-Antoine Drouin -  <a href="https://kubernetes.io">Kubernetes</a>
-									and projects at <a href="http://www.lmd.jussieu.fr">LMD</a>	</li>
-								<li>Nov. 13 2018: Jayesh Badwaik <a href="https://jayeshbadwaik.github.io">https://jayeshbadwaik.github.io</a></li>
-								<li>Nov. 15 2018: Mathieu Lobet (Maison de la Simulation) - optimisaiton de <a href="https://smileipic.github.io/Smilei">SMILEI</a></li>
-								<li>Nov. 29 2018: Alejandro Alvarez Laguna (LPP) - C++ electrostatic plasma fluid code </li>
-								<li>Dec. 6 2018: Clément Moissard (LPP) - Hybrid PIC code for IMCE/Magnetoshere interations </li>
-								<li>Dec. 13 2018: Ralph Katra (LPP) - TBD</li>
+									and projects at <a href="http://www.lmd.jussieu.fr">LMD</a>	Room: LMD 05-30-33.</li>
+								<li>Nov. 13 2018: Jayesh Badwaik <a href="https://jayeshbadwaik.github.io">https://jayeshbadwaik.github.io</a>, LPP, Aile 0</li>
+								<li>Nov. 15 2018: Mathieu Lobet (Maison de la Simulation) - optimisaiton de <a href="https://smileipic.github.io/Smilei">SMILEI</a>, LPP, Aile 0</li>
+								<li>Nov. 29 2018: Alejandro Alvarez Laguna (LPP) - C++ electrostatic plasma fluid code , LPP, Aile 0</li>
+								<li>Dec. 6 2018: Clément Moissard (LPP) - Hybrid PIC code for IMCE/Magnetoshere interations , LPP, Aile 0</li>
+								<li>Dec. 13 2018: Ralph Katra (LPP) - TBD, LPP, Aile 0</li>
 							</ul>
 
 				</div>
@@ -271,7 +273,7 @@
 
 
 
-			<!-- CTA -->
+			<!-- CTA
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
@@ -280,35 +282,27 @@
 						</header>
 					</div>
 				</section>
+				-->
 
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
 						<div class="row">
 							<section class="3u 6u(narrower) 12u$(mobilep)">
-								<h3>Links to Stuff</h3>
+								<h3>Links</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="http://www.lpp.fr">Laboratory of Plasma Physics</a></li>
+									<li><a href="http://www.plasapar.com/en/">Plas@Par</a></li>
 								</ul>
 							</section>
-							<section class="3u 6u$(narrower) 12u$(mobilep)">
-								<h3>More Links to Stuff</h3>
+<!--							<section class="3u 6u$(narrower) 12u$(mobilep)">
+								<h3>  </h3>
 								<ul class="links">
 									<li><a href="#">Duis neque nisi dapibus</a></li>
 									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
 								</ul>
 							</section>
+						-->
 							<section class="6u 12u(narrower)">
 								<h3>Get In Touch</h3>
 								<form>
@@ -339,11 +333,14 @@
 
 					<!-- Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+
+							<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+
 							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+						-->
 						</ul>
 
 					<!-- Copyright -->
